Bug 549931 Irregular message does not update header pane on message view (aka 'undisclosed-recipients' not showing). r/sr=dmose